# mpedc

./: .gitignore  EDC_Sample
EDCClient/: CMakeLists.txt  EDCClient.c  Makefile  b.sh  b_ptr.sh  b_ss.sh  build_bof.sh  build_key.sh  build_showscreen.sh  buzzer.c  cron  crontab  edc.list  edc_net_setup.sh  edc_network.conf  edc_network.ini  edc_setup.conf  edc_show_ip.sh  employee.list  install.sh  key_loop.c  matrix500.h  package.sh  ptr_init  ptr_init.c  rc  set_edc_ssh_auth.sh  set_time.sh  show_screen.c  test.out  test_bof.c
EDCClient/conf/: comtest.ini  edc_network.conf  edc_setup.conf
EDCClient/cron/: EDCClient.cron  crontab
EDCClient/lib/: libmpedc.h
EDCClient/list/: edc.list  employee.list
EDCClient/script/: edc_net_setup.sh  edc_show_ip.sh  install.sh  rc  watchdog.sh
EDCClient/tool/: EDC_Sample  demo.out  key_loop  keypad.out  kill_all.sh  test_bof  tool_kp
EDCServer/: EDC_server_setup.ini.txt  UpgradeLog.XML  UpgradeLog.htm
EDC_Sample/: EDC_Sample.c  EDC_Sample.h  b.sh  libmpedc.h
ManagementWeb/: .directory  201308280634.7z  AssemblyInfo.cs  CopyCountDetail.cs  DbConvert.cs  Department.aspx  Department.aspx.cs  Department.aspx.designer.cs  DepartmentDTO.cs  DepartmentDetail.cs  DesignTimeResolveAssemblyReferencesInput.cache  EDC.aspx  EDC.aspx.cs  EDC.aspx.designer.cs  EDCDTO.cs  EDCDetail.cs  EDCWEB.mdf  EDCWEB_log.ldf  EDCWeb_Source.csproj  EDCWeb_Source.csproj.FileListAbsolute.txt  EDCWeb_Source.sln  Employee.aspx  Employee.aspx.cs  Employee.aspx.designer.cs  EmployeeDTO.cs  EmployeeDetail.cs  FunMenu.aspx  FunMenu.aspx.cs  Level.aspx  (+45 more)
(+26 files in other folders)
